added search products and resolved guards

--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -126,7 +126,7 @@
         </div>
 
         <!-- viewallcard -->
-        <div *ngIf="flag">
+        <div *ngIf="flag && user != null">
           <table class="table table-bordered">
             <tr>
               <th>Username</th>
