--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,10 +1,23 @@
 <app-header *ngIf="showHeader"></app-header>
 <br />
+
 <!-- <p>{{ product.productName }}</p> -->
+<div class="main">
+  <div class="form-group has-search">
+    <span class="fa fa-search form-control-feedback"></span>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Search"
+      [(ngModel)]="searchText"
+      (ngModelChange)="search($event)"
+    />
+  </div>
+</div>
 <div class="container">
   <div class="row">
     <div *ngFor="let product of products" class="col-md-3 thumbnail">
-      <div class="card" style="width: 20em; height: 24em">
+      <div class="card" style="width: 20em; height: 21em">
         <a (click)="viewProduct(product)">
           <img
             [src]="product.productImageUrl"
