--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -349,11 +349,13 @@
         <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
         </p>
     </footer> -->
-    <footer
+    <!-- <footer
       class="w3-container w3-padding-32 w3-center w3-opacity w3-light-grey w3-xlarge"
     >
       Copyright &copy; FinCare.com 2021
-    </footer>
+    </footer> -->
+
+    <app-footer></app-footer>
 
     <script>
       // Automatic Slideshow - change image every 4 seconds
