--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -46,8 +46,8 @@
       (click)="logout()"
       >Logout</a
     >
-    <b *ngIf="flag" style="float: right; padding-top: 10px"
-      >Welcome back {{ userName }}!!</b
+    <b *ngIf="flag" style="float: right; padding-top: 10px ;padding-right: 15px;"
+      >Welcome back {{ userName }} !!</b
     >
   </div>
 </div>
