added footer and some css

--- a/src/app/components/eligibility/eligibility.component.html
+++ b/src/app/components/eligibility/eligibility.component.html
@@ -1,1 +1,7 @@
-<p>eligibility works!</p>
+<ul>
+  <li>Should be atleast 18 years older.</li>
+  <li>Should upload Pancard and Aadharcard(.png format) for verification.</li>
+  <li>Should pay joining fee of &#8377; 1,000 for Gold card.</li>
+  <li>Should pay joining fee of &#8377; 2,000 for Titanium card.</li>
+  <!-- <li></li> -->
+</ul>
