--- a/src/app/components/emi-and-buy/emi-and-buy.component.html
+++ b/src/app/components/emi-and-buy/emi-and-buy.component.html
@@ -81,7 +81,7 @@
       style="padding-top: 5rem"
     >
       <div class="container">
-        <h3>Frequently Asked Questions</h3>
+        <h4>Frequently Asked Questions</h4>
         <div
           class="panel-group"
           id="accordion"
@@ -122,3 +122,4 @@
     <br />
   </div>
 </div>
+<app-footer></app-footer>
