--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,17 @@
 <div class="footer">
   <a data-toggle="modal" data-target="#eligibility"
-    >Eligibility and charges for registration</a
+    ><i>Eligibility and charges for registration</i></a
   >
-  <a data-toggle="modal" data-target="#terms">Terms and conditions</a>
+  <a data-toggle="modal" data-target="#terms"><i>Terms and conditions</i></a>
+  <div class="icons">
+    <i>Copyright &copy; FinCare.com 2021</i>&nbsp;
+    <i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;
+    <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;
+    <i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;
+    <i class="fa fa-envelope-open" aria-hidden="true"></i>&nbsp;
+  </div>
 </div>
+
 <div
   class="modal fade"
   id="eligibility"
