--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,14 +1,15 @@
 .footer {
   position: relative;
-  left: 0;
-  bottom: 0;
   width: 100%;
-  height: 10%;
+  height: 8%;
   /* padding-top: 5%; */
   background-color: #172337;
-  padding: 30px;
+  padding: 17px;
   color: white;
-  text-align: center;
+  text-align: left;
+}
+a {
+  margin-left: 5%;
 }
 a.one:link {
   color: #ff0000;
@@ -18,4 +19,8 @@ a.one:visited {
 }
 a.one:hover {
   color: #ffcc00;
+}
+.icons {
+  float: right;
+  margin-right: 3%;
 }
