--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -32,7 +32,7 @@
       style="width: 70%; margin-left: auto; margin-right: auto"
     >
       <tr>
-        <th>Transaction ID</th>
+        <th>Transaction Id</th>
         <td>{{ transaction.transactionId }}</td>
       </tr>
       <tr>
@@ -68,3 +68,6 @@
 <button (click)="convetToPDF()" style="background: cyan; margin-left: 45%">
   Generate Pdf
 </button>
+<br />
+
+<!-- <app-footer></app-footer> -->
