--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -6,6 +6,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  padding: 7px;
 }
 .has-search .form-control {
   padding-left: 2.375rem;
@@ -26,4 +27,9 @@ img {
 .main {
   width: 50%;
   margin: 50px auto;
+}
+
+.card {
+  width: 17em;
+  height: 23em;
 }
