--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -101,9 +101,9 @@
           />
           <div class="overlay">
             <div class="text">
-              <h4>Registration Fee : ₹ 2000</h4>
-              <h4>Processing Fee : 4% on MRP</h4>
-              <h4>Total credit : ₹ 2,50,000</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Registration Fee : ₹ 2000</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Processing Fee : 4% on MRP</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Total credit : ₹ 2,50,000</h4>
             </div>
           </div>
         </div>
@@ -126,9 +126,10 @@
           />
           <div class="overlay">
             <div class="text">
-              <h4>Registration Fee : ₹ 1000</h4>
-              <h4>Processing Fee : 6% on MRP</h4>
-              <h4>Total credit : ₹ 1,50,000</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Registration Fee : ₹ 1000</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Processing Fee : 6% on MRP</h4>
+              <h4  style="font-family: 'Times New Roman', Times, serif;">Total credit :  ₹ 1,50,000</h4>
+              
             </div>
           </div>
         </div>
