--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,8 +1,7 @@
 <app-header *ngIf="showHeader"></app-header>
-<br />
 
 <!-- <p>{{ product.productName }}</p> -->
-<div class="main">
+<div class="main" style="margin-top: -30px;">
   <div class="form-group has-search">
     <span class="fa fa-search form-control-feedback"></span>
     <input
