--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 10%;
   /* padding-top: 5%; */
-  background-color: #172337;
+  background-color: #302f2f;
   padding: 30px;
   color: white;
   text-align: center;
