--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,4 +1,8 @@
 <body oncontextmenu="return false" class="snippet-body">
+  <div class="w3-content" style="
+    max-width: 2000px;
+    background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
+  ">
   <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
     <div class="card card0 border-0">
       <div class="row d-flex">
@@ -45,8 +49,8 @@
                 />
               </div>
 
-              <div class="row mb-3 px-3">
-                <button type="submit" class="btn btn-blue text-center">
+              <div class="row mb-3 px-3" style="padding-top: 5%;">
+                <button type="submit" class="btn btn-dark text-center">
                   Generate OTP
                 </button>
               </div>
@@ -67,7 +71,7 @@
                 />
               </div>
               <div class="row mb-3 px-3">
-                <button type="submit" class="btn btn-blue text-center">
+                <button type="submit" class="btn btn-dark text-center">
                   Verify
                 </button>
               </div>
@@ -75,13 +79,14 @@
           </div>
         </div>
       </div>
-      <div class="bg-blue py-4">
+      <div class="bg-blue py-4" style="background-color: rgb(43, 41, 41);">
         <div class="row px-3">
           <small class="ml-4 ml-sm-5 mb-2"
-            >Copyright &copy; 2021. All rights reserved.</small
+            >Copyright &copy; FinCare 2021. All rights reserved.</small
           >
         </div>
       </div>
     </div>
+  </div>
   </div>
 </body>
