Formating is Done

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -69,9 +69,9 @@
           src="https://www.solidbackgrounds.com/images/1920x1080/1920x1080-red-solid-color-background.jpg"
           alt="Card image" />
         <div class="card-img-overlay">
-          <h5 class="card-title">Card Details: Deactivated</h5>
-          <p class="card-text">Name: {{ userName }}</p>
-          <p class="card-text">Last updated 3 mins ago</p>
+          <h5 class="card-title">Card Details: Pending</h5>
+          <h6 class="card-text">Name: {{ userName }}</h6>
+          <h6 class="card-text">Last updated 3 mins ago</h6>
         </div>
       </div>
     </div>
