--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -155,6 +155,7 @@
             src="https://www.mymobileindia.com/wp-content/uploads/2020/07/infinix-smart-4plus.jpg"
             alt="New York"
             style="width: 100%"
+            height="160px"
             class="w3-hover-opacity"
           />
           <div class="w3-container w3-white">
@@ -175,10 +176,11 @@
         </div>
         <div class="w3-third w3-margin-bottom" style="height: 35%; width: 30%">
           <img
-            src="https://banner2.cleanpng.com/20180418/kle/kisspng-surface-pro-3-surface-pro-4-surface-book-2-pc-5ad77f705db4a8.5784371715240723043838.jpg"
+            src="https://images-na.ssl-images-amazon.com/images/I/71h6PpGaz9L._AC_SL1500_.jpg"
             alt="Paris"
             style="width: 100%"
             class="w3-hover-opacity"
+            height="160px"
           />
           <div class="w3-container w3-white">
             <p><b>Laptops</b></p>
@@ -201,7 +203,9 @@
             src="https://images.gessato.com/NvJJUR8.OWDa~b707/w:768/h:539/q:100/https://www.gessato.com/wp-content/uploads/2018/12/zeitgeist-aquaholic-watch-1.jpg"
             alt="San Francisco"
             style="width: 100%"
+            height="160px"
             class="w3-hover-opacity"
+            
           />
           <div class="w3-container w3-white">
             <p><b>Watches</b></p>
