--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -73,8 +73,8 @@
         ></app-product-details>
       </div>
       <div class="modal-footer" *ngIf="showHeader">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">
-          <a style="text-decoration: none; color: white" (click)="buy(product)"
+        <button type="button" class="btn btn-dark" data-dismiss="modal">
+          <a style="text-decoration: none; color: white;" (click)="buy(product)"
             >Buy</a
           >
         </button>
