--- a/src/app/components/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/components/terms-and-conditions/terms-and-conditions.component.html
@@ -1,1 +1,10 @@
-<p>terms-and-conditions works!</p>
+<ul>
+<li>
+    "EMI" or "Equated Monthly Installment" means the equated monthly installment 
+    of amounts payable by the Card Member to any Bank comprising of principal amount or other charges, if applicable.
+</li>
+<li>
+    Protection of Your Account: You agree that you are responsible for maintaining the confidentiality of your account and password and agree to accept responsibility for
+     all activities that occur under your account or password.
+</li>
+</ul>
