--- a/src/app/components/emi-and-buy/emi-and-buy.component.html
+++ b/src/app/components/emi-and-buy/emi-and-buy.component.html
@@ -6,28 +6,20 @@
   <div class="row">
     <div class="col-md-6">
       <div class="card" style="width: 36em; height: 32em">
-        <img
-          [src]="product.productImageUrl"
-          alt="watch"
-          width="100px"
-          height="200px"
-        />
+        <img [src]="product.productImageUrl" alt="watch" width="100px" height="200px" />
         <div class="card-body">
           <p class="card-text">{{ product.productName }}</p>
         </div>
       </div>
-      <button
-        *ngIf="!isLoading; else showLoader"
-        class="btn btn-primary"
-        (click)="pay()"
-      >
+      <button *ngIf="!isLoading; else showLoader" class="btn btn-dark" (click)="pay()"
+        style="margin-top: 10px; background-color: rgb(41, 39, 39);">
         Pay now
       </button>
-      <ng-template #showLoader
-        ><button class="btn btn-primary" disabled>
+      <ng-template #showLoader>
+
+        <button class="btn btn-dark" style="margin-top: 10px;margin-left: 20px;" disabled>
           Processing...
-        </button></ng-template
-      >
+        </button></ng-template>
     </div>
     <div class="col-md-6 thumbnail">
       <label><b>Product name :</b></label>
@@ -50,12 +42,7 @@
           </tr>
           <tr *ngFor="let data of product.emiSchemadetails; let i = index">
             <td>
-              <input
-                type="radio"
-                name="emiScheme"
-                [value]="data.noOfMonth"
-                [(ngModel)]="transaction.emiScheme"
-              />
+              <input type="radio" name="emiScheme" [value]="data.noOfMonth" [(ngModel)]="transaction.emiScheme" />
             </td>
             <td>{{ data.emiScheme }}</td>
             <td>&#8377; {{ data.amountPerMonth }}</td>
@@ -75,42 +62,20 @@
       </div>
     </div> -->
     <br />
-    <section
-      class="accordion-section clearfix mt-3"
-      aria-label="Question Accordions"
-      style="padding-top: 5rem"
-    >
+    <section class="accordion-section clearfix mt-3" aria-label="Question Accordions" style="padding-top: 5rem">
       <div class="container">
         <h4>Frequently Asked Questions</h4>
-        <div
-          class="panel-group"
-          id="accordion"
-          role="tablist"
-          aria-multiselectable="true"
-        >
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default" *ngFor="let f of faq">
             <div class="panel-heading p-3 mb-3" role="tab" id="heading1">
               <h3 class="panel-title">
-                <a
-                  class="collapsed"
-                  role="button"
-                  title=""
-                  data-toggle="collapse"
-                  data-parent="#accordion"
-                  href="#collapse1"
-                  aria-expanded="true"
-                  aria-controls="collapse1"
-                >
+                <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion"
+                  href="#collapse1" aria-expanded="true" aria-controls="collapse1">
                   {{ f.questions }}
                 </a>
               </h3>
             </div>
-            <div
-              id="collapse1"
-              class="panel-collapse collapse"
-              role="tabpanel"
-              aria-labelledby="heading1"
-            >
+            <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
               <div class="panel-body px-3 mb-4">
                 <p>{{ f.answer }}</p>
               </div>
