--- a/src/app/components/pay-joining-fee/pay-joining-fee.component.html
+++ b/src/app/components/pay-joining-fee/pay-joining-fee.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="bg-blue py-4" style="background-color: rgb(105, 101, 101);">
           <div class="row px-3">
-            <small class="ml-4 ml-sm-5 mb-2">Copyright &copy; 2021. All rights reserved.</small>
+            <small class="ml-4 ml-sm-5 mb-2">Copyright &copy; FinCare 2021. All rights reserved.</small>
           </div>
         </div>
       </div>
