updated validation for forgot,change,otp

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,53 +1,89 @@
 <body oncontextmenu="return false" class="snippet-body">
-  <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
-    <div class="card card0 border-0">
-      <div class="row d-flex">
-        <div class="col-lg-6">
-          <div class="card1 pb-5">
-            <div class="row">
-              <img src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
-                class="logo" />
-            </div>
-            <div class="row px-3 justify-content-center mt-4 mb-5 border-line">
-              <img
-                src="https://image.cnbcfm.com/api/v1/image/106318651-1577994105247gettyimages-1083493808.jpg?v=1577994157&w=1400&h=950"
-                class="image" />
+  <div
+    class="w3-content"
+    style="
+      max-width: 2000px;
+      background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
+    "
+  >
+    <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+      <div class="card card0 border-0">
+        <div class="row d-flex">
+          <div class="col-lg-6">
+            <div class="card1 pb-5">
+              <div class="row">
+                <img
+                  src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
+                  class="logo"
+                />
+              </div>
+              <div
+                class="row px-3 justify-content-center mt-4 mb-5 border-line"
+              >
+                <img
+                  src="https://image.cnbcfm.com/api/v1/image/106318651-1577994105247gettyimages-1083493808.jpg?v=1577994157&w=1400&h=950"
+                  class="image"
+                />
+              </div>
             </div>
           </div>
+          <div class="col-lg-5" style="margin-top: 120px">
+            <form #changepwd="ngForm" (ngSubmit)="changePassword()">
+              <div class="card2 card border-0 px-4 py-5">
+                <div class="row px-3">
+                  <label class="mb-1">
+                    <h6 class="mb-0 text-sm">New Password</h6>
+                  </label>
+                  <input
+                    class="mb-4"
+                    type="password"
+                    name="password"
+                    placeholder="Enter a valid email password"
+                    [(ngModel)]="newPswd.password"
+                    #newpwd="ngModel"
+                    required
+                  />
+                </div>
+                <div class="row px-3">
+                  <label class="mb-1">
+                    <h6 class="mb-0 text-sm">Re-enter new password</h6>
+                  </label>
+                  <input
+                    type="password"
+                    name="repassword"
+                    placeholder="Enter Password Again"
+                    [(ngModel)]="confirmPswd"
+                    #repwd="ngModel"
+                    pattern="{{ newpwd.value }}"
+                    required
+                  />
+                </div>
+                <div
+                  class="row px-3"
+                  *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)"
+                >
+                  <div style="color: red">Both passwords dont match</div>
+                  <!-- question mark to supress the null object error-->
+                </div>
+                <div class="row mb-3 px-3">
+                  <button
+                    type="submit"
+                    class="btn btn-dark text-center"
+                    [disabled]="changepwd.invalid"
+                  >
+                    Update
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="col-lg-5" style="margin-top: 120px">
-          <form #changepwd="ngForm" (ngSubmit)="changePassword()">
-            <div class="card2 card border-0 px-4 py-5">
-              <div class="row px-3">
-                <label class="mb-1">
-                  <h6 class="mb-0 text-sm">New Password</h6>
-                </label>
-                <input class="mb-4" type="password" name="password" placeholder="Enter a valid email password"
-                  [(ngModel)]="newPswd.password" #newpwd="ngModel" />
-              </div>
-              <div class="row px-3">
-                <label class="mb-1">
-                  <h6 class="mb-0 text-sm">Re-enter new password</h6>
-                </label>
-                <input type="password" name="repassword" placeholder="Enter Password Again" [(ngModel)]="confirmPswd"
-                  #repwd="ngModel" pattern="{{ newpwd.value }}" />
-              </div>
-              <div class="row px-3" *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)">
-                <div style="color: red">Both passwords dont match</div>
-                <!-- question mark to supress the null object error-->
-              </div>
-              <div class="row mb-3 px-3">
-                <button type="submit" class="btn btn-blue text-center">
-                  Update
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="bg-blue py-4">
-        <div class="row px-3">
-          <small class="ml-4 ml-sm-5 mb-2">Copyright &copy; 2021. All rights reserved.</small>
+        <div class="bg-blue py-4" style="background-color: rgb(41, 38, 38)">
+          <div class="row px-3">
+            <small class="ml-4 ml-sm-5 mb-2"
+              >Copyright &copy; FinCare 2021. All rights reserved.</small
+            >
+          </div>
         </div>
       </div>
     </div>
