--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,7 +1,6 @@
-<app-header *ngIf="showHeader"></app-header>
-
+<app-header *ngIf="showHeader"></app-header> <br /><br /><br /><br />
 <!-- <p>{{ product.productName }}</p> -->
-<div class="main" style="margin-top: -30px;">
+<div class="main" style="margin-top: -30px">
   <div class="form-group has-search">
     <span class="fa fa-search form-control-feedback"></span>
     <input
@@ -74,7 +73,7 @@
       </div>
       <div class="modal-footer" *ngIf="showHeader">
         <button type="button" class="btn btn-dark" data-dismiss="modal">
-          <a style="text-decoration: none; color: white;" (click)="buy(product)"
+          <a style="text-decoration: none; color: white" (click)="buy(product)"
             >Buy</a
           >
         </button>
