--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,33 +1,50 @@
 <app-header></app-header>
-<div class="w3-content" style="
+<div
+  class="w3-content"
+  style="
     max-width: 2000px;
     margin-top: 46px;
     background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
-  ">
+  "
+>
   <p *ngIf="flag; then ifb; else elsepart"></p>
   <ng-template #ifb>
     <p *ngIf="cardTypebool; then ifb1; else else1"></p>
     <ng-template #ifb1>
       <div class="col d-flex justify-content-center">
-        <div class="card bg-dark text-white" style="
+        <div
+          class="card bg-dark text-white"
+          style="
             width: 50%;
             height: 50%;
             margin-top: 60px;
             margin-bottom: 40px;
             font-family: 'Big Shoulders Stencil Text', cursive;
-          ">
-          <img class="card-img" src="../../../assets/GoldCredit.PNG" alt="Card image" />
+          "
+        >
+          <img
+            class="card-img"
+            src="../../../assets/GoldCredit.PNG"
+            alt="Card image"
+          />
           <div class="card-img-overlay">
-            <div class="credit-font credit-card-number" style="margin-left: 120px; margin-top: 150px; font-size: 3rem;">
-              4 5 6 8 6 7 5 4 5 4 2 1 8 7 5 4
+            <div
+              class="credit-font credit-card-number"
+              style="margin-left: 120px; margin-top: 150px; font-size: 3rem"
+            >
+              {{ result.cardId }} {{ result.cardId }} {{ result.cardId }}
             </div>
             <div class="card-text" style="margin-top: 40px; font-size: 1.7rem">
               Name: {{ userName }}
             </div>
             <div>
-              <p style="font-size: 1.5rem;">Total Credit: {{ totalCredit }}</p>
-              <p style="font-size: 1.5rem;margin-top: -10px;">Credit Remaining: {{ creditRemaining }}</p>
-              <p style="font-size: 1.5rem;margin-top: -10px;">Validity Till: {{ validityTill }}</p>
+              <p style="font-size: 1.5rem">Total Credit: {{ totalCredit }}</p>
+              <p style="font-size: 1.5rem; margin-top: -10px">
+                Credit Remaining: {{ creditRemaining }}
+              </p>
+              <p style="font-size: 1.5rem; margin-top: -10px">
+                Validity Till: {{ validityTill }}
+              </p>
             </div>
           </div>
         </div>
@@ -35,27 +52,38 @@
     </ng-template>
     <ng-template #else1>
       <div class="col d-flex justify-content-center">
-        <div class="card bg-dark text-white" style="
+        <div
+          class="card bg-dark text-white"
+          style="
             width: 50%;
             height: 50%;
             margin-top: 60px;
             margin-bottom: 40px;
             font-family: 'Big Shoulders Stencil Text', cursive;
-          ">
-          <img class="card-img" src="../../../assets/TitaniumCredit.PNG" alt="Card image" />
+          "
+        >
+          <img
+            class="card-img"
+            src="../../../assets/TitaniumCredit.PNG"
+            alt="Card image"
+          />
           <div class="card-img-overlay">
-            <div class="credit-font credit-card-number"
-              style="margin-left: 120px; margin-top: 150px; font-size: 3rem">
-              4 5 6 8 6 7 5 4 5 4 2 1 8 7 5 4
+            <div
+              class="credit-font credit-card-number"
+              style="margin-left: 120px; margin-top: 150px; font-size: 3rem"
+            >
+              {{ result.cardId }} {{ result.cardId }} {{ result.cardId }}
             </div>
             <div class="card-text" style="margin-top: 14px; font-size: 1.7rem">
               Name: {{ userName }}
             </div>
             <p style="font-size: 1.5rem">Total Credit: {{ totalCredit }}</p>
-            <p style="font-size: 1.5rem;margin-top: -10px;">
+            <p style="font-size: 1.5rem; margin-top: -10px">
               Credit Remaining: {{ creditRemaining }}
             </p>
-            <p style="font-size: 1.5rem;margin-top: -10px;">Validity Till: {{ validityTill }}</p>
+            <p style="font-size: 1.5rem; margin-top: -10px">
+              Validity Till: {{ validityTill }}
+            </p>
           </div>
         </div>
       </div>
@@ -63,11 +91,15 @@
   </ng-template>
   <ng-template #elsepart>
     <div class="col d-flex justify-content-center">
-      <div class="card bg-dark text-white" style="width: 50%; height: 50%;margin-top: 60px;
-      margin-bottom: 40px;">
-        <img class="card-img"
+      <div
+        class="card bg-dark text-white"
+        style="width: 50%; height: 50%; margin-top: 60px; margin-bottom: 40px"
+      >
+        <img
+          class="card-img"
           src="https://www.solidbackgrounds.com/images/1920x1080/1920x1080-red-solid-color-background.jpg"
-          alt="Card image" />
+          alt="Card image"
+        />
         <div class="card-img-overlay">
           <h5 class="card-title">Card Details: Pending</h5>
           <h6 class="card-text">Name: {{ userName }}</h6>
@@ -77,19 +109,24 @@
     </div>
   </ng-template>
 
-  <div class="card border-dark mb-3" style="
+  <div
+    class="card border-dark mb-3"
+    style="
       max-width: 70rem;
       height: auto;
       margin-bottom: 100px;
       margin-left: 180px;
       background-color: lightgray;
-    ">
+    "
+  >
     <div class="card-body text-primary">
-      <h2 class="card-title" style="color: black;">Recent Transactions</h2>
+      <h2 class="card-title" style="color: black">Recent Transactions</h2>
       <div class="card-group" *ngIf="!noTransaction">
         <div class="card" *ngIf="tran01 != null">
           <div class="card-body">
-            <h5 class="card-title">{{ tran01.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ tran01.productName }}
+            </h5>
             <p class="card-text">Amount Paid: {{ tran01.amount_paid }}</p>
             <p class="card-text">
               Date Of Transaction: {{ tran01.transaction_date }}
@@ -98,9 +135,15 @@
           </div>
         </div>
 
-        <div class="card" *ngIf="tran02 != null" style="margin-left: 15px; margin-right: 15px">
+        <div
+          class="card"
+          *ngIf="tran02 != null"
+          style="margin-left: 15px; margin-right: 15px"
+        >
           <div class="card-body">
-            <h5 class="card-title">{{ tran02.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ tran02.productName }}
+            </h5>
             <p class="card-text">Amount Paid: {{ tran02.amount_paid }}</p>
             <p class="card-text">
               Date Of Transaction: {{ tran02.transaction_date }}
@@ -110,7 +153,9 @@
         </div>
         <div class="card" *ngIf="tran03 != null">
           <div class="card-body">
-            <h5 class="card-title">{{ tran03.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ tran03.productName }}
+            </h5>
             <p class="card-text">Amount Paid: {{ tran03.amount_paid }}</p>
             <p class="card-text">
               Date Of Transaction: {{ tran03.transaction_date }}
@@ -120,28 +165,37 @@
         </div>
       </div>
       <div class="card-group" *ngIf="noTransaction">
-        <b style="color: rgb(48, 46, 46);">No Transactions yet...</b>
+        <b style="color: rgb(48, 46, 46)">No Transactions yet...</b>
       </div>
-      <button *ngIf="!noTransaction" class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px"
-        [routerLink]="['/viewAllTransactions']">
+      <button
+        *ngIf="!noTransaction"
+        class="w3-button w3-black w3-margin-bottom"
+        style="float: right; margin-top: 10px"
+        [routerLink]="['/viewAllTransactions']"
+      >
         View All
       </button>
     </div>
   </div>
   <br />
-  <div class="card border-dark mb-3" style="
+  <div
+    class="card border-dark mb-3"
+    style="
       max-width: 70rem;
       height: auto;
       margin-bottom: 150px;
       margin-left: 180px;
       background-color: lightgray;
-    ">
+    "
+  >
     <div class="card-body text-primary">
-      <h2 class="card-title" style="color: black;">Recent Purchases</h2>
+      <h2 class="card-title" style="color: black">Recent Purchases</h2>
       <div class="card-group" *ngIf="!notPurchased">
         <div class="card" *ngIf="pran01 != null">
           <div class="card-body">
-            <h5 class="card-title">{{ pran01.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ pran01.productName }}
+            </h5>
             <p class="card-text">Product Id: {{ pran01.productId }}</p>
             <p class="card-text" *ngIf="pran01.amount_remaining > 0">
               Amount Remaining:
@@ -150,9 +204,15 @@
           </div>
         </div>
 
-        <div class="card" *ngIf="pran02 != null" style="margin-left: 15px; margin-right: 15px">
+        <div
+          class="card"
+          *ngIf="pran02 != null"
+          style="margin-left: 15px; margin-right: 15px"
+        >
           <div class="card-body">
-            <h5 class="card-title">{{ pran02.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ pran02.productName }}
+            </h5>
             <p class="card-text">Product Id: {{ pran02.productId }}</p>
             <p class="card-text" *ngIf="pran02.amount_remaining > 0">
               Amount Remaining: {{ pran02.amount_remaining }}
@@ -162,7 +222,9 @@
         </div>
         <div class="card" *ngIf="pran03 != null">
           <div class="card-body">
-            <h5 class="card-title">{{ pran03.productName }}</h5>
+            <h5 class="card-title" style="color: black">
+              {{ pran03.productName }}
+            </h5>
             <p class="card-text">Product Id: {{ pran03.productId }}</p>
             <p class="card-text" *ngIf="pran03.amount_remaining > 0">
               Amount Remaining: {{ pran03.amount_remaining }}
@@ -172,10 +234,14 @@
         </div>
       </div>
       <div class="card-group" *ngIf="notPurchased">
-        <b style="color: rgb(48, 46, 46);">No products purchased yet...</b>
+        <b style="color: rgb(48, 46, 46)">No products purchased yet...</b>
       </div>
-      <button *ngIf="!notPurchased" class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px"
-        [routerLink]="['/productsPurchased']">
+      <button
+        *ngIf="!notPurchased"
+        class="w3-button w3-black w3-margin-bottom"
+        style="float: right; margin-top: 10px"
+        [routerLink]="['/productsPurchased']"
+      >
         View All
       </button>
     </div>
