--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,92 +1,112 @@
 <body oncontextmenu="return false" class="snippet-body">
-  <div class="w3-content" style="
-    max-width: 2000px;
-    background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
-  ">
-  <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
-    <div class="card card0 border-0">
-      <div class="row d-flex">
-        <div class="col-lg-6">
-          <div class="card1 pb-5">
-            <div class="row">
-              <img
-                src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
-                class="logo"
-              />
-            </div>
-            <div class="row px-3 justify-content-center mt-4 mb-5 border-line">
-              <img
-                src="https://image.cnbcfm.com/api/v1/image/106318651-1577994105247gettyimages-1083493808.jpg?v=1577994157&w=1400&h=950"
-                class="image"
-              />
+  <div
+    class="w3-content"
+    style="
+      max-width: 2000px;
+      background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
+    "
+  >
+    <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+      <div class="card card0 border-0">
+        <div class="row d-flex">
+          <div class="col-lg-6">
+            <div class="card1 pb-5">
+              <div class="row">
+                <img
+                  src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
+                  class="logo"
+                />
+              </div>
+              <div
+                class="row px-3 justify-content-center mt-4 mb-5 border-line"
+              >
+                <img
+                  src="https://image.cnbcfm.com/api/v1/image/106318651-1577994105247gettyimages-1083493808.jpg?v=1577994157&w=1400&h=950"
+                  class="image"
+                />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-5" style="margin-top: 70px;">
-          <form #generateOtp="ngForm" (ngSubmit)="sendOtp()">
-            <div class="card2 card border-0 px-4 py-4">
-              <div class="row px-3">
-                <label class="mb-1">
-                  <h6 class="mb-0 text-sm">Email Address</h6>
-                </label>
-                <input
-                  class="mb-4"
-                  type="text"
-                  name="email"
-                  placeholder="Enter a valid email address"
-                  [(ngModel)]="forgotpwd.emailId"
-                />
-              </div>
-              <div class="row px-3">
-                <label class="mb-1">
-                  <h6 class="mb-0 text-sm">Registration Id</h6>
-                </label>
-                <input
-                  type="number"
-                  name="number"
-                  placeholder="Enter Registration Id"
-                  [(ngModel)]="forgotpwd.userId"
-                />
-              </div>
+          <div class="col-lg-5" style="margin-top: 70px">
+            <form #generateOtp="ngForm" (ngSubmit)="sendOtp()">
+              <div class="card2 card border-0 px-4 py-4">
+                <div class="row px-3">
+                  <label class="mb-1">
+                    <h6 class="mb-0 text-sm">Email Address</h6>
+                  </label>
+                  <input
+                    class="mb-4"
+                    type="text"
+                    name="email"
+                    placeholder="Enter a valid email address"
+                    [(ngModel)]="forgotpwd.emailId"
+                    required
+                  />
+                </div>
+                <div class="row px-3">
+                  <label class="mb-1">
+                    <h6 class="mb-0 text-sm">Registration Id</h6>
+                  </label>
+                  <input
+                    type="number"
+                    name="number"
+                    placeholder="Enter Registration Id"
+                    [(ngModel)]="forgotpwd.userId"
+                    required
+                  />
+                </div>
 
-              <div class="row mb-3 px-3" style="padding-top: 5%;">
-                <button type="submit" class="btn btn-dark text-center">
-                  Generate OTP
-                </button>
-              </div>
-            </div>
-          </form>
-
-          <div *ngIf="flag" style=" margin-top: 30px;" class="card2 card border-0 px-3 py-3">
-            <form #OTPForm="ngForm" (ngSubmit)="verifyOtp()">
-              <div class="row px-3">
-                <label class="mb-1">
-                  <h6 class="mb-0 text-sm">Enter OTP</h6>
-                </label>
-                <input
-                  type="number"
-                  name="number"
-                  placeholder="Enter OTP"
-                  [(ngModel)]="otp"
-                />
-              </div>
-              <div class="row mb-3 px-3">
-                <button type="submit" class="btn btn-dark text-center">
-                  Verify
-                </button>
+                <div class="row mb-3 px-3" style="padding-top: 5%">
+                  <button
+                    type="submit"
+                    class="btn btn-dark text-center"
+                    [disabled]="generateOtp.invalid"
+                  >
+                    Generate OTP
+                  </button>
+                </div>
               </div>
             </form>
+
+            <div
+              *ngIf="flag"
+              style="margin-top: 30px"
+              class="card2 card border-0 px-3 py-3"
+            >
+              <form #OTPForm="ngForm" (ngSubmit)="verifyOtp()">
+                <div class="row px-3">
+                  <label class="mb-1">
+                    <h6 class="mb-0 text-sm">Enter OTP</h6>
+                  </label>
+                  <input
+                    type="number"
+                    name="number"
+                    placeholder="Enter OTP"
+                    [(ngModel)]="otp"
+                    required
+                  />
+                </div>
+                <div class="row mb-3 px-3">
+                  <button
+                    type="submit"
+                    class="btn btn-dark text-center"
+                    [disabled]="OTPForm.invalid"
+                  >
+                    Verify
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="bg-blue py-4" style="background-color: rgb(43, 41, 41);">
-        <div class="row px-3">
-          <small class="ml-4 ml-sm-5 mb-2"
-            >Copyright &copy; FinCare 2021. All rights reserved.</small
-          >
+        <div class="bg-blue py-4" style="background-color: rgb(43, 41, 41)">
+          <div class="row px-3">
+            <small class="ml-4 ml-sm-5 mb-2"
+              >Copyright &copy; FinCare 2021. All rights reserved.</small
+            >
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </body>
