--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -101,9 +101,16 @@
           />
           <div class="overlay">
             <div class="text">
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Registration Fee : ₹ 2000</h4>
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Processing Fee : 4% on MRP</h4>
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Total credit : ₹ 2,50,000</h4>
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Registration Fee : <br />₹ 2000
+              </h4>
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Processing Fee :<br />
+                4% on MRP
+              </h4>
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Total credit : <br />₹ 2,50,000
+              </h4>
             </div>
           </div>
         </div>
@@ -126,10 +133,17 @@
           />
           <div class="overlay">
             <div class="text">
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Registration Fee : ₹ 1000</h4>
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Processing Fee : 6% on MRP</h4>
-              <h4  style="font-family: 'Times New Roman', Times, serif;">Total credit :  ₹ 1,50,000</h4>
-              
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Registration Fee :<br />
+                ₹ 1000
+              </h4>
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Processing Fee : <br />6% on MRP
+              </h4>
+              <h4 style="font-family: 'Times New Roman', Times, serif">
+                Total credit : <br />
+                ₹ 1,50,000
+              </h4>
             </div>
           </div>
         </div>
@@ -205,7 +219,6 @@
             style="width: 100%"
             height="160px"
             class="w3-hover-opacity"
-            
           />
           <div class="w3-container w3-white">
             <p><b>Watches</b></p>
