--- a/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -17,6 +17,22 @@
 
  */
 /*     brand Colors              */
+
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color:rgb(85, 77, 77);
+ 
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .6s ease;
+  opacity: 0.5;
+}
+
 .card {
   font-size: .875rem;
 }
