--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,35 +1,23 @@
 <app-header></app-header>
-<div
-  class="w3-content"
-  style="
+<div class="w3-content" style="
     max-width: 2000px;
     margin-top: 46px;
     background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
-  "
->
+  ">
   <p *ngIf="flag; then ifb; else elsepart"></p>
   <ng-template #ifb>
     <p *ngIf="cardTypebool; then ifb1; else else1"></p>
     <ng-template #ifb1>
       <div class="col d-flex justify-content-center">
-        <div
-          class="card bg-dark text-white"
-          style="
+        <div class="card bg-dark text-white" style="
             width: 50%;
             height: 50%;
             font-family: 'Big Shoulders Stencil Text', cursive;
-          "
-        >
-          <img
-            class="card-img"
-            src="../../../assets/GoldCredit.PNG"
-            alt="Card image"
-          />
+          ">
+          <img class="card-img" src="../../../assets/GoldCredit.PNG" alt="Card image" />
           <div class="card-img-overlay">
-            <div
-              class="credit-font credit-card-number"
-              style="margin-left: 150px; margin-top: 150px; font-size: 3.5rem"
-            >
+            <div class="credit-font credit-card-number"
+              style="margin-left: 150px; margin-top: 150px; font-size: 3.5rem">
               4 5 6 8 6 7 5 4 5 4 2 1 8 7 5 4
             </div>
             <div class="card-text" style="margin-top: 45px; font-size: 2rem">
@@ -46,24 +34,15 @@
     </ng-template>
     <ng-template #else1>
       <div class="col d-flex justify-content-center">
-        <div
-          class="card bg-dark text-white"
-          style="
+        <div class="card bg-dark text-white" style="
             width: 50%;
             height: 50%;
             font-family: 'Big Shoulders Stencil Text', cursive;
-          "
-        >
-          <img
-            class="card-img"
-            src="../../../assets/TitaniumCredit.PNG"
-            alt="Card image"
-          />
+          ">
+          <img class="card-img" src="../../../assets/TitaniumCredit.PNG" alt="Card image" />
           <div class="card-img-overlay">
-            <div
-              class="credit-font credit-card-number"
-              style="margin-left: 150px; margin-top: 150px; font-size: 3.5rem"
-            >
+            <div class="credit-font credit-card-number"
+              style="margin-left: 150px; margin-top: 150px; font-size: 3.5rem">
               4 5 6 8 6 7 5 4 5 4 2 1 8 7 5 4
             </div>
             <div class="card-text" style="margin-top: 14px; font-size: 2rem">
@@ -81,31 +60,30 @@
   </ng-template>
   <ng-template #elsepart>
     <div class="col d-flex justify-content-center">
-      <div class="card bg-dark text-white" style="width: 50%; height: 50%">
-        <img
-          class="card-img"
-          src="https://www.solidbackgrounds.com/images/1920x1080/1920x1080-red-solid-color-background.jpg"
-          alt="Card image"
-        />
+      <div class="card bg-dark text-white" style="
+        width: 50%;
+        height: 50%;
+        font-family: 'Big Shoulders Stencil Text', cursive;
+      ">
+        <img class="card-img"
+          src="../../../assets/Blue_Credit_card_337x213.jpg"
+          alt="Card image" />
         <div class="card-img-overlay">
-          <h5 class="card-title">Card Details: Deactivated</h5>
-          <p class="card-text">Name: {{ userName }}</p>
-          <p class="card-text">Last updated 3 mins ago</p>
+          <h5 class="card-title" style="margin-top: 22rem; font-size: 2rem;">Card Details: Not Activated Yet</h5>
+          <p class="card-text" style="font-size: 2rem;">Name: {{ userName }}</p>
+          <p class="card-text" style="font-size: 2rem;">Wait For Administrator to approve</p>
         </div>
       </div>
     </div>
   </ng-template>
 
-  <div
-    class="card border-dark mb-3"
-    style="
+  <div class="card border-dark mb-3" style="
       max-width: 70rem;
       height: auto;
       margin-bottom: 100px;
       margin-left: 250px;
       background-color: lightgray;
-    "
-  >
+    ">
     <div class="card-body text-primary">
       <h2 class="card-title">Recent Transactions</h2>
       <div class="card-group" *ngIf="!noTransaction">
@@ -120,11 +98,7 @@
           </div>
         </div>
 
-        <div
-          class="card"
-          *ngIf="tran02 != null"
-          style="margin-left: 15px; margin-right: 15px"
-        >
+        <div class="card" *ngIf="tran02 != null" style="margin-left: 15px; margin-right: 15px">
           <div class="card-body">
             <h5 class="card-title">{{ tran02.productName }}</h5>
             <p class="card-text">Amount Paid: {{ tran02.amount_paid }}</p>
@@ -148,27 +122,20 @@
       <div class="card-group" *ngIf="noTransaction">
         <b>No Transactions yet...</b>
       </div>
-      <button
-        *ngIf="!noTransaction"
-        class="w3-button w3-black w3-margin-bottom"
-        style="float: right; margin-top: 10px"
-        [routerLink]="['/viewAllTransactions']"
-      >
+      <button *ngIf="!noTransaction" class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px"
+        [routerLink]="['/viewAllTransactions']">
         View All
       </button>
     </div>
   </div>
   <br />
-  <div
-    class="card border-dark mb-3"
-    style="
+  <div class="card border-dark mb-3" style="
       max-width: 70rem;
       height: auto;
       margin-bottom: 150px;
       margin-left: 250px;
       background-color: lightgray;
-    "
-  >
+    ">
     <div class="card-body text-primary">
       <h2 class="card-title">Recent Purchases</h2>
       <div class="card-group" *ngIf="!notPurchased">
@@ -183,11 +150,7 @@
           </div>
         </div>
 
-        <div
-          class="card"
-          *ngIf="pran02 != null"
-          style="margin-left: 15px; margin-right: 15px"
-        >
+        <div class="card" *ngIf="pran02 != null" style="margin-left: 15px; margin-right: 15px">
           <div class="card-body">
             <h5 class="card-title">{{ pran02.productName }}</h5>
             <p class="card-text">Product Id: {{ pran02.productId }}</p>
@@ -211,12 +174,8 @@
       <div class="card-group" *ngIf="notPurchased">
         <b>No products purchased yet...</b>
       </div>
-      <button
-        *ngIf="!notPurchased"
-        class="w3-button w3-black w3-margin-bottom"
-        style="float: right; margin-top: 10px"
-        [routerLink]="['/productsPurchased']"
-      >
+      <button *ngIf="!notPurchased" class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px"
+        [routerLink]="['/productsPurchased']">
         View All
       </button>
     </div>
