--- a/src/app/components/transactioncomp/transactioncomp.component.html
+++ b/src/app/components/transactioncomp/transactioncomp.component.html
@@ -3,12 +3,13 @@
   class="w3-content"
   style="
     max-width: 2000px;
-    height: auto;
+    height: 70rem;
     margin-top: 46px;
     background-size: cover;
     background-image: url('https://www.nerdwallet.com/assets/blog/wp-content/uploads/2019/07/credit-cards-4-steps-1920x1152.jpg');
   "
 >
+
   <div
     class="card border-dark mb-3"
     style="
